--- a/organizer4github/src/index.html
+++ b/organizer4github/src/index.html
@@ -21,11 +21,24 @@
 <div class="left">
   <div class="inventoryDiv"><h1 class=" text-2xl">Inventory1.0 beta</h1>
   </div>
+  <div>
 <h2 class="item">Cables</h2>
 <h2 class="item">Hardware</h2>
 <h2 class="item">Accessories</h2>
 <h2 class="item">Tasks</h2>
 <h2 class="item">End Of Life</h2>
+</div>
+<div class="updateDiv">
+<div class="lastUpdate">
+  <div class="lastUpdateInner"><h1 class="text-4xl justify-start ml-2 mt-2 totalInventory"></h1></div>
+  <h1 class="ml-2 mt-2">Total inventory items</h1>
+</div>
+<div class="lastUpdate2">
+  <div class="lastUpdateInner"><h1 class="text-4xl justify-start ml-2 mt-2 totalInventory">Features</h1></div>
+  <h1 class="ml-2 mt-2">Next beta version</h1>
+</div>
+</div>
+
 </div>
 <!-- Right start -->
 <div class="right">
@@ -83,7 +96,6 @@
 
 
 <div class="w-full whoops"><h1 class="text-4xl">Whoops! not done yet...</h1></div>
-
 
 
 
