--- a/organizer4github/src/index.html
+++ b/organizer4github/src/index.html
@@ -34,12 +34,22 @@
   <h1 class="ml-2 mt-2">Total inventory items</h1>
 </div>
 <div class="lastUpdate2">
-  <div class="lastUpdateInner"><h1 class="text-4xl justify-start ml-2 mt-2 totalInventory">Features</h1></div>
+  <div class="lastUpdateInner"><h1 class="text-4xl justify-start ml-2 mt-2">Features</h1></div>
   <h1 class="ml-2 mt-2">Next beta version</h1>
 </div>
 </div>
 
 </div>
+<div class="updateDiv2">
+  <div class="lastUpdate">
+    <div class="lastUpdateInner"><h1 class="text-4xl justify-start ml-2 mt-2 totalInventory"></h1></div>
+    <h1 class="ml-2 mt-2">Total inventory items</h1>
+  </div>
+  <div class="lastUpdate2">
+    <div class="lastUpdateInner"><h1 class="text-4xl justify-start ml-2 mt-2">Features</h1></div>
+    <h1 class="ml-2 mt-2">Next beta version</h1>
+  </div>
+  </div>
 <!-- Right start -->
 <div class="right">
   <button class="close">Close</button>
