--- a/organizer4github/src/index.html
+++ b/organizer4github/src/index.html
@@ -46,14 +46,21 @@
             <h1 class="ml-2 mt-2">Next beta version</h1>
           </div>
         </div>
+        <div class="lastUpdate33">
         <div class="lastUpdate3">
           <div class="lastUpdateInner">
             <h1 class="text-4xl justify-start ml-2 mt-2">Supported Cameras In Stock</h1>
           </div>
-          <button class="mr-2 mt-5" style="color: rgb(15, 35, 255);">Show them</button>
+          <button class="mr-2 mt-5 showcams" style="color: rgb(15, 35, 255);">Show them</button>
         </div>
+      </div>
         <!-- SupportedCameras start -->
-        <div class="w-full ml-2 camerasSheet"><h1>Cameras in stock: </h1></div>
+        <div class="w-full camerasSheet mt-2">
+          <div class="lables w-full flex justify-evently bg-slate-200">
+          <h1>In stock: </h1> 
+          <h1>Supported:</h1></div>
+        </div>
+        
         <!-- SupportedCameras end -->
       </div>
       <div class="updateDiv2">
@@ -68,6 +75,17 @@
             <h1 class="text-4xl justify-start ml-2 mt-2">Features</h1>
           </div>
           <h1 class="ml-2 mt-2">Next beta version</h1>
+        </div>
+        <div class="lastUpdate4">
+          <div class="lastUpdateInner">
+            <h1 class="text-4xl justify-start ml-2 mt-2">Supported Cameras In Stock</h1>
+          </div>
+          <button class="mr-2 mt-5 showcams" style="color: rgb(15, 35, 255);">Show them</button>
+        </div>
+        <div class="w-full camerasSheet mt-2 ml-2">
+          <div class="lables w-full flex justify-evently bg-slate-200">
+          <h1>In stock: </h1> 
+          <h1>Supported:</h1></div>
         </div>
       </div>
       
