--- a/organizer4github/src/index.html
+++ b/organizer4github/src/index.html
@@ -17,7 +17,7 @@
       src="https://kit.fontawesome.com/c46614fcf6.js"
       crossorigin="anonymous"
     ></script>
-    <title>Document</title>
+    <title>Inventory1.0</title>
   </head>
   <body>
     <div class="wrapper">
