--- a/organizer4github/src/index.html
+++ b/organizer4github/src/index.html
@@ -24,13 +24,13 @@
       <div class="left">
         <div class="inventoryDiv">
           <h1 class="text-2xl">Inventory1.0 beta</h1>
+          <p>mobile first optimized</p>
         </div>
         <div>
           <h2 class="item">Cables</h2>
           <h2 class="item">Hardware</h2>
           <h2 class="item">Accessories</h2>
           <h2 class="item">Tasks</h2>
-          <h2 class="item">End Of Life</h2>
         </div>
         <div class="updateDiv">
           <div class="lastUpdate">
@@ -49,7 +49,7 @@
         <div class="lastUpdate33">
         <div class="lastUpdate3">
           <div class="lastUpdateInner">
-            <h1 class="text-4xl justify-start ml-2 mt-2"> Cameras In Stock</h1>
+            <h1 class="text-4xl justify-start ml-2 mt-2"> End Of Life</h1>
           </div>
           <button class="mr-2 mt-5 showcams" style="color: rgb(15, 35, 255);">Show them</button>
         </div>
@@ -151,9 +151,6 @@
         </div>
       </div>
 
-      <div class="w-full whoops">
-        <h1 class="text-4xl">Whoops! not done yet...</h1>
-      </div>
 
       <!-- wrapperEnd -->
     </div>
