--- a/organizer4github/src/index.html
+++ b/organizer4github/src/index.html
@@ -78,7 +78,8 @@
         </div>
         <div class="lastUpdate4">
           <div class="lastUpdateInner">
-            <h1 class="text-4xl justify-start ml-2 mt-2"> Cameras In Stock</h1>
+            <h1 class="text-4xl justify-start ml-2 mt-2"> End Of Life
+            </h1>
           </div>
           <button class="mr-2 mt-5 showcams" style="color: rgb(15, 35, 255);">Show them</button>
         </div>
